2008-02-08  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendtrash.c (unescape_pathname):
	Handle unescaping __ correctly (#514040)

2008-02-06  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
	Ensure name is set in query_info (#511601)
	Clean up setting display name of /

2008-02-05  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonvolumemonitor.c (mount_removed):
	Don't spew warnings when hidden mounts are unmounted.
	
2008-02-05  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
        (do_query_info):
	Correctly set the name for toplevel items.

2008-02-04  Tomas Bzatek  <tbzatek@redhat.com>

	* daemon/gvfsjobmakesymlink.c:
	Wrong symlink target passed to backend

2008-02-04  Alexander Larsson  <alexl@redhat.com>

	* README:
	Add some info in README

2008-02-04  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Make name of sftp root be "/ on <host>" (#511515)

2008-02-04  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsdaemonutils.c:
        * hal/ghalvolume.c:
	Cleanup i18n strings (#510192)

2008-02-04  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsdaemonprotocol.h:
        * client/gdaemonfileinputstream.c:
        * client/gdaemonfileoutputstream.c:
        * daemon/gvfsreadchannel.c:
        * daemon/gvfswritechannel.c:
	Remove SEEK_CUR from channel protocol. This
	doesn't work with readahead, and can be converted
	to a SEEK_SET since we know the file position on
	the client side.

2008-02-04  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfileinputstream.c:
        * client/gdaemonfileoutputstream.c:
	Init seq_nr to 1 so that seq_nr 0 is special
	(used for e.g. readahead ops)
	
        * daemon/gvfschannel.[ch]:
        * daemon/gvfsreadchannel.c:
	Implement readahead.

2008-02-03  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: